--- a/App/App.cbp
+++ b/App/App.cbp
@@ -13,9 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="Function" />
 					<Add directory="Header" />
 					<Add directory="Infomation" />
+					<Add directory="SFML Function" />
+					<Add directory="Function" />
+					<Add directory="Data" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics-s-d" />
@@ -60,20 +62,25 @@
 		<Linker>
 			<Add directory="C:/Users/suyun/Downloads/SFML-2.5.1/lib" />
 		</Linker>
+		<Unit filename="Function/CheckAccount.cpp" />
 		<Unit filename="Function/DoublyLinkedList.cpp" />
 		<Unit filename="Function/Export.cpp" />
 		<Unit filename="Function/Import.cpp" />
-		<Unit filename="Function/Save.cpp" />
+		<Unit filename="Function/LoginScreen.cpp" />
+		<Unit filename="Function/ProfileScreen.cpp" />
 		<Unit filename="Function/Student.cpp" />
 		<Unit filename="Function/User.cpp" />
 		<Unit filename="Function/VoidOfUser.cpp" />
+		<Unit filename="Function/WrongPass.cpp" />
 		<Unit filename="Function/year.cpp" />
+		<Unit filename="Header/CheckAccount.h" />
 		<Unit filename="Header/Class.h" />
 		<Unit filename="Header/Course.h" />
 		<Unit filename="Header/DoublyLinkedList.hpp" />
 		<Unit filename="Header/Export.h" />
 		<Unit filename="Header/Import.h" />
-		<Unit filename="Header/Save.h" />
+		<Unit filename="Header/LoginScreen.h" />
+		<Unit filename="Header/ProfileScreen.h" />
 		<Unit filename="Header/Scoreboard.h" />
 		<Unit filename="Header/Semester.h" />
 		<Unit filename="Header/Staff.h" />
@@ -81,6 +88,7 @@
 		<Unit filename="Header/User.h" />
 		<Unit filename="Header/VoidOfUser.h" />
 		<Unit filename="Header/VoidOfYear.h" />
+		<Unit filename="Header/WrongPass.h" />
 		<Unit filename="Header/year.h" />
 		<Unit filename="Infomation/ID.text" />
 		<Unit filename="Infomation/classes.CSV" />
@@ -96,6 +104,11 @@
 		<Unit filename="Information/years.csv" />
 		<Unit filename="Login/LoginScreen.cpp" />
 		<Unit filename="Login/LoginScreen.h" />
+		<Unit filename="SFML Function/Button.h" />
+		<Unit filename="SFML Function/TextBox.cpp" />
+		<Unit filename="SFML Function/TextBox.h" />
+		<Unit filename="SFML Function/TextField.cpp" />
+		<Unit filename="SFML Function/TextField.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
