--- a/App/App.cbp
+++ b/App/App.cbp
@@ -73,6 +73,7 @@
 		<Unit filename="Function/StudentMainMenu.cpp" />
 		<Unit filename="Function/User.cpp" />
 		<Unit filename="Function/VoidOfUser.cpp" />
+		<Unit filename="Function/VoidOfYear.cpp" />
 		<Unit filename="Function/year.cpp" />
 		<Unit filename="Header/ChangePass.h" />
 		<Unit filename="Header/CheckAccount.h" />
