--- a/App/App.cbp
+++ b/App/App.cbp
@@ -62,6 +62,7 @@
 		<Linker>
 			<Add directory="C:/Users/suyun/Downloads/SFML-2.5.1/lib" />
 		</Linker>
+		<Unit filename="Function/ChangePass.cpp" />
 		<Unit filename="Function/CheckAccount.cpp" />
 		<Unit filename="Function/DoublyLinkedList.cpp" />
 		<Unit filename="Function/Export.cpp" />
@@ -70,10 +71,11 @@
 		<Unit filename="Function/ProfileScreen.cpp" />
 		<Unit filename="Function/Student.cpp" />
 		<Unit filename="Function/StudentMainMenu.cpp" />
+		<Unit filename="Function/StudentMainMenu.cpp" />
 		<Unit filename="Function/User.cpp" />
 		<Unit filename="Function/VoidOfUser.cpp" />
-		<Unit filename="Function/WrongPass.cpp" />
 		<Unit filename="Function/year.cpp" />
+		<Unit filename="Header/ChangePass.h" />
 		<Unit filename="Header/CheckAccount.h" />
 		<Unit filename="Header/Class.h" />
 		<Unit filename="Header/Course.h" />
@@ -87,10 +89,10 @@
 		<Unit filename="Header/Staff.h" />
 		<Unit filename="Header/Student.h" />
 		<Unit filename="Header/StudentMainMenu.h" />
+		<Unit filename="Header/StudentMainMenu.h" />
 		<Unit filename="Header/User.h" />
 		<Unit filename="Header/VoidOfUser.h" />
 		<Unit filename="Header/VoidOfYear.h" />
-		<Unit filename="Header/WrongPass.h" />
 		<Unit filename="Header/year.h" />
 		<Unit filename="Infomation/ID.text" />
 		<Unit filename="Infomation/classes.CSV" />
@@ -104,9 +106,12 @@
 		<Unit filename="Information/courses.CSV" />
 		<Unit filename="Information/semesters.csv" />
 		<Unit filename="Information/years.csv" />
-		<Unit filename="Login/LoginScreen.cpp" />
-		<Unit filename="Login/LoginScreen.h" />
 		<Unit filename="SFML Function/Button.h" />
+		<Unit filename="SFML Function/PasswordField.hpp" />
+		<Unit filename="SFML Function/ClickableText.cpp" />
+		<Unit filename="SFML Function/ClickableText.hpp" />
+		<Unit filename="SFML Function/ListOfText.cpp" />
+		<Unit filename="SFML Function/ListOfText.hpp" />
 		<Unit filename="SFML Function/PasswordField.hpp" />
 		<Unit filename="SFML Function/TextBox.cpp" />
 		<Unit filename="SFML Function/TextBox.h" />
